--- a/CounterStrikeAlerter/MainWindow.xaml
+++ b/CounterStrikeAlerter/MainWindow.xaml
@@ -21,6 +21,7 @@
             <Label x:Name="serverPlayers" Content="{Binding ServerMonitor.Server.CurrentPlayers}" Background="#FFFFA0FF" Margin="331,0,0,0" Padding="1" FontWeight="Bold"/>
             <DataGrid x:Name="playersGrid" Margin="0,3,0,0" Grid.Row="1" IsReadOnly="True" ItemsSource="{Binding ServerMonitor.PlayersChange}" AutoGenerateColumns="False">
                 <DataGrid.Columns >
+                    <DataGridTextColumn ClipboardContentBinding="{x:Null}" Header="Idx" Binding="{Binding Index}"/>
                     <DataGridTextColumn ClipboardContentBinding="{x:Null}" Header="Name" Binding="{Binding Name}"/>
                     <DataGridTextColumn ClipboardContentBinding="{x:Null}" Header="Score" Binding="{Binding Score}"/>
                     <DataGridTextColumn ClipboardContentBinding="{x:Null}" Header="Duration" Binding="{Binding Duration, StringFormat=hh\\:mm\\:ss}"/>
