--- a/CounterStrikeAlerter/MainWindow.xaml
+++ b/CounterStrikeAlerter/MainWindow.xaml
@@ -16,8 +16,8 @@
                 <RowDefinition Height="20" ToolTip="Server info."/>
                 <RowDefinition ToolTip="Players info"/>
             </Grid.RowDefinitions>
-            <Label x:Name="serverName" Content="{Binding ServerMonitor.Server.Name}" HorizontalAlignment="Left" Width="179" Background="#FF17FD60" Padding="1" FontWeight="Bold"/>
-            <Label x:Name="serverMap" Content="{Binding ServerMonitor.Server.Map}" HorizontalAlignment="Left" Width="142" Background="#FF17FDE8" Margin="184,0,0,0" Padding="1" FontWeight="Bold"/>
+            <TextBlock x:Name="serverName" Text="{Binding ServerMonitor.Server.Name}" HorizontalAlignment="Left" Width="179" Background="#FF17FD60" Padding="1" FontWeight="Bold"/>
+            <TextBlock x:Name="serverMap" Text="{Binding ServerMonitor.Server.Map}" HorizontalAlignment="Left" Width="142" Background="#FF17FDE8" Margin="184,0,0,0" Padding="1" FontWeight="Bold"/>
             <Label x:Name="serverPlayers" Content="{Binding ServerMonitor.Server.CurrentPlayers}" Background="#FFFFA0FF" Margin="331,0,0,0" Padding="1" FontWeight="Bold"/>
             <DataGrid x:Name="playersGrid" Margin="0,3,0,0" Grid.Row="1" IsReadOnly="True" ItemsSource="{Binding ServerMonitor.PlayersChange}" AutoGenerateColumns="False">
                 <DataGrid.Columns >
